test/regress/core/zindex00.bin.wast
(assert_invalid
  (module binary
    "\00\61\73\6d\01\00\00\00\01\88\80\80\80\00\02\60"
    "\01\7f\00\60\00\00\03\82\80\80\80\00\01\01\04\84"
    "\80\80\80\00\01\70\00\01\0a\96\80\80\80\00\01\90"
    "\80\80\80\00\00\41\01\04\40\41\00\11\ff\ff\ff\ff"
    "\0f\00\0b\0b"
  )
  ""
)
